--- a/backend/package.json
+++ b/backend/package.json
@@ -10,14 +10,19 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@prisma/adapter-pg": "^7.1.0",
+    "@prisma/client": "^7.1.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.2",
+    "@types/pg": "^8.16.0",
+    "prisma": "^7.1.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   }
