--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "pg": "^8.16.3",
+    "socket.io": "^4.8.1",
     "zod": "^4.2.1"
   },
   "devDependencies": {
