fix: readme deployment update

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,1 +1,4 @@
-DATABASE_URL=
+DATABASE_URL=postgres://postgres:postgres@db:5432/task_manager
+ACCESS_TOKEN_SECRET=your_access_token_secret
+REFRESH_TOKEN_SECRET=your_refresh_token_secret
+PORT=8000
